# flyer-template

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: README.md  import-and-deploy.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: about-flyte.prompt.md  fonts.yaml
prompts/: spec.md  updates  webapi.md
src/flyte/: __init__.py  cli.py  flyte.py  hello.py  render.py  template_analyzer.py  web.py
src/flyte/templates/: fonts.html.j2  index.html  template_index.html
templates/: index.json
templates/calendar/EventsScience/: regions.yaml
templates/calendar/ProgrammingMeritBadge/: regions.yaml
templates/facebook/TechEventDataFB/: regions.yaml
templates/flyers/TechEvent/: regions.yaml
templates/flyers/TechEventOsvaldoQR/: regions.yaml
test/: compute_region_areas.py  render_examples.sh  run_examples.sh  run_web_server.sh  test_template_analyzer.py  test_web_api.py
test/content/: General Osvaldo_content.yaml  GeneralOsvaldoQRC_content.yaml  GeneralOsvaldo_content.yaml  GeneralTech_content.yaml  LicenseToCode_content.yaml  MeritBadges_content.yaml  SeptEvents_content.yaml
test/dev/: extract_fonts.py  group_fonts.py  normalize_fonts_yaml.py  pdf_fonts.py
test/import_test4/LicenseToCode/: regions.yaml
test/input/: index.json
test/input/subdir/GeneralOsvaldo/: regions.yaml
test/output/: GeneralOsvaldoQRC_rendered.html  GeneralOsvaldo_rendered.html  GeneralTech_rendered.html  LicenseToCode_rendered.html  MeritBadges_rendered.html  SeptEvents_rendered.html
test/style/: style.css
